add file change

--- a/about.html
+++ b/about.html
@@ -326,7 +326,7 @@
                                 <h3><a href="shop-grid.html">Alugar casa</a></h3>
                                 <p>Casas para alugar disponíveis no site, podemos combinar com você uma casa que você
                                     vai querer chamar de lar.</p>
-                                <a class="ltn__service-btn" href="shop-grid.html"> Encontre uma casa <i
+                                <a class="ltn__service-btn" href="shop-grid.html"> Encontre seu imóvel <i
                                         class="flaticon-right-arrow"></i></a>
                             </div>
                         </div>
