add file change

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                                     <a href="about.html" class="theme-btn-1 btn btn-effect-1">Fazer um
                                                         Investigação</a>
                                                     <a class="ltn__video-play-btn bg-white"
-                                                        href="https://www.youtube.com/embed/bUtWg1ietIE?si=k6Vx2M-MjvSUr9gh&amp;controls=0"
+                                                        href="https://www.youtube.com/embed/8DA0EOKJEbg?si=Jx6Yehw9j9EjhBMF"
                                                         data-rel="lightcase">
                                                         <i class="fa fa-play  ltn__secondary-color"></i>
                                                     </a>
@@ -297,7 +297,7 @@
                                             <div class="slide-item-info-inner ltn__slide-animation">
                                                 <div class="slide-video mb-50 d-none">
                                                     <a class="ltn__video-icon-2 ltn__video-icon-2-border"
-                                                        href="https://www.youtube.com/embed/tlThdr3O5Qo"
+                                                        href="https://www.youtube.com/embed/MRYNRjVtP0Y?si=Wm9ooesXN3Y2bXH3"
                                                         data-rel="lightcase:myCollection">
                                                         <i class="fa fa-play"></i>
                                                     </a>
@@ -539,7 +539,7 @@
             <div class="ltn__video-bg-img ltn__video-popup-height-600--- bg-overlay-black-30 bg-image bg-fixed ltn__animation-pulse1"
                 data-bg="img/bg/19.jpg">
                 <a class="ltn__video-icon-2 ltn__video-icon-2-border---"
-                    href="https://www.youtube.com/embed/_heLeLYrhks?si=ivfg_Hm8R7eJuvmK"
+                    href="https://www.youtube.com/embed/MRYNRjVtP0Y?si=Wm9ooesXN3Y2bXH3"
                     data-rel="lightcase:myCollection">
                     <i class="fa fa-play"></i>
                 </a>
