--- a/product-details.html
+++ b/product-details.html
@@ -297,7 +297,7 @@
                             <div class="ltn__video-bg-img ltn__video-popup-height-500 bg-overlay-black-50 bg-image mb-60"
                                 data-bg="img/product-3/3.jpg">
                                 <a class="ltn__video-icon-2 ltn__video-icon-2-border---"
-                                    href="https://www.youtube.com/embed/_heLeLYrhks?si=ivfg_Hm8R7eJuvmK"
+                                    href="https://www.youtube.com/embed/MRYNRjVtP0Y?si=Wm9ooesXN3Y2bXH3"
                                     data-rel="lightcase:myCollection">
                                     <i class="fa fa-play"></i>
                                 </a>
