add file change

--- a/service-details.html
+++ b/service-details.html
@@ -403,7 +403,7 @@
                                 <ul>
                                     <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="contact.html"></a>Contate-nos</li>
+                                    <li><a href="contact.html">Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
