--- a/history.html
+++ b/history.html
@@ -630,7 +630,7 @@
                             <h4 class="footer-title">Atendimento ao cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Contate-nos</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="service-details.html">Serviços</a</li>
                                 </ul>
