add file change

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                 <h6 class="slide-sub-title white-color--- animated"><span><i
                                                             class="fas fa-home"></i></span> Santos Imobiliaria</h6>
                                                 <h1 class="slide-title animated ">Cada imóvel, uma história
-                                                    <br><span>E hora </span> de começar a sua
+                                                    <br><span>É hora </span> de começar a sua
                                                 </h1>
                                                 <div class="slide-brief animated">
                                                     <p>Realize o seu sonho da casa própria e conquiste a sua VIDA.</p>
