--- a/contact.html
+++ b/contact.html
@@ -377,7 +377,7 @@
                                             <i class="icon-placeholder"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p>Santa Catarina, São paulo, rio Grande do sul</p>
+                                            <p>Santa Catarina, São Paulo, Rio Grande do Sul</p>
                                         </div>
                                     </li>
                                     <li>
@@ -385,7 +385,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+55 48 99174-0106</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 99174-0106</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -414,7 +414,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -425,7 +425,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="contact.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
