--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+55 48 991740401">+55 48 99174-0106</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -974,7 +974,7 @@
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="service-details.html">Blog</a></li>
                                         <li><a href="product-details.html">Todos os produtos</a></li>
                                     </ul>
                                 </div>
@@ -985,7 +985,7 @@
                                 <h4 class="footer-title">Serviços</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Conecte-se</a></li>
+                                        <li><a href="contact.html">Contato</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                         <li><a href="about.html">Termos e Condições</a></li>
                                     </ul>
@@ -994,12 +994,12 @@
                         </div>
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                             <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Cliente</h4>
+                                <h4 class="footer-title">Atendimento ao cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="login.html">Conecte-se</a></li>
+                                        <li><a href="contact.html">Contato</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="contact.html">Contate-nos</li>
+                                        <li><a href="service-details.html">Serviços</a</li>
                                     </ul>
                                 </div>
                             </div>
