--- a/index.html
+++ b/index.html
@@ -974,8 +974,9 @@
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
-                                        <li><a href="service-details.html">Blog</a></li>
-                                        <li><a href="product-details.html">Todos os produtos</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="shop.html">Todos os produtos</a></li>
+                                        <li><a href="locations.html">Mapa de locais</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -985,7 +986,7 @@
                                 <h4 class="footer-title">Serviços</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Contato</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                         <li><a href="about.html">Termos e Condições</a></li>
                                     </ul>
@@ -997,9 +998,9 @@
                                 <h4 class="footer-title">Atendimento ao cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Contato</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="service-details.html">Serviços</a</li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
