--- a/index.html
+++ b/index.html
@@ -975,32 +975,29 @@
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
                                         <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="shop.html">Todos os produtos</a></li>
-                                        <li><a href="locations.html">Mapa de locais</a></li>
+                                        <li><a href="product-details.html">Todos os produtos</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-                            <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Serviços</h4>
-                                <div class="footer-menu">
-                                    <ul>
-                                        <li><a href="login.html">Conecte-se</a></li>
-                                        <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="about.html">Termos e Condições</a></li>
-                                    </ul>
-                                </div>
+                        <div class="footer-widget footer-menu-widget clearfix">
+                            <h4 class="footer-title">Serviços</h4>
+                            <div class="footer-menu">
+                                <ul>
+                                    <li><a href="contact.html">Conecte-se</a></li>
+                                    <li><a href="account.html">Minha conta</a></li>
+                                    <li><a href="about.html">Termos e Condições</a></li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                             <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Atendimento ao cliente</h4>
+                                <h4 class="footer-title">Cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="contact.html"></a>Contate-nos</li>
+                                        <li><a href="contact.html">Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
