--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -975,19 +975,21 @@
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
                                         <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="product-details.html">Todos os produtos</a></li>
+                                        <li><a href="shop.html">Todos os produtos</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Serviços</h4>
-                            <div class="footer-menu">
-                                <ul>
-                                    <li><a href="contact.html">Conecte-se</a></li>
-                                    <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="about.html">Termos e Condições</a></li>
-                                </ul>
+                        <div class="col-xl-2 col-md-6 col-sm-6 col-12">
+                            <div class="footer-widget footer-menu-widget clearfix">
+                                <h4 class="footer-title">Serviços</h4>
+                                <div class="footer-menu">
+                                    <ul>
+                                        <li><a href="login.html">Conecte-se</a></li>
+                                        <li><a href="account.html">Minha conta</a></li>
+                                        <li><a href="about.html">Termos e Condições</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
@@ -997,7 +999,7 @@
                                     <ul>
                                         <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="contact.html">Contate-nos</li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
