add file change

--- a/product7-details.html
+++ b/product7-details.html
@@ -347,7 +347,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+55 48 991740401">+55 48 99174-0106</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -377,7 +377,7 @@
                                     <ul>
                                         <li><a href="about.html">Sobre</a></li>
                                         <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="product-details.html">Todos os produtos</a></li>
+                                        <li><a href="shop.html">Todos os produtos</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -387,7 +387,7 @@
                                 <h4 class="footer-title">Serviços</h4>
                                 <div class="footer-menu">
                                     <ul>
-                                        <li><a href="contact.html">Conecte-se</a></li>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                         <li><a href="about.html">Termos e Condições</a></li>
                                     </ul>
@@ -401,7 +401,7 @@
                                     <ul>
                                         <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="contact.html">Contate-nos</li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
