--- a/history.html
+++ b/history.html
@@ -578,7 +578,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+55 48 99174-0106</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -604,13 +604,13 @@
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
                             <h4 class="footer-title">Empresa</h4>
-                                <div class="footer-menu">
-                                    <ul>
-                                        <li><a href="about.html">Sobre</a></li>
-                                        <li><a href="service-details.html">Blog</a></li>
-                                        <li><a href="product-details.html">Todos os produtos</a></li>
-                                    </ul>
-                                </div>
+                            <div class="footer-menu">
+                                <ul>
+                                    <li><a href="about.html">Sobre</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
+                                    <li><a href="shop.html">Todos os produtos</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
@@ -618,7 +618,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -627,12 +627,12 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Atendimento ao cliente</h4>
+                            <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Contate-nos</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
@@ -651,7 +651,7 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Todos os direitos reservados à empresa  <span class="current-year"></span></p>
+                            <p>Todos os direitos reservados à empresa <span class="current-year"></span></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-12 align-self-center">
