--- a/login.html
+++ b/login.html
@@ -339,7 +339,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+0123-456789">+55 48 99174-0106</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -370,7 +370,6 @@
                                         <li><a href="about.html">Sobre</a></li>
                                         <li><a href="blog.html">Blog</a></li>
                                         <li><a href="shop.html">Todos os produtos</a></li>
-                                        <li><a href="locations.html">Mapa de locais</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -389,12 +388,12 @@
                         </div>
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                             <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Atendimento ao cliente</h4>
+                                <h4 class="footer-title">Cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
-                                        <li><a href="contact.html">Contate-nos</li>
+                                        <li><a href="contact.html"></a>Contate-nos</li>
                                     </ul>
                                 </div>
                             </div>
