--- a/service-details.html
+++ b/service-details.html
@@ -379,7 +379,7 @@
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="product-details.html">Todos os produtos</a></li>
+                                    <li><a href="shop.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -389,7 +389,7 @@
                             <h4 class="footer-title">Serviços</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Conecte-se</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
                                     <li><a href="about.html">Termos e Condições</a></li>
                                 </ul>
@@ -403,7 +403,7 @@
                                 <ul>
                                     <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="contact.html">Contate-nos</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
